kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; kitty 0.18.3 documentation</title>
+    <title>Index &#8212; kitty 0.19.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -433,6 +433,8 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="invocation.html#cmdoption-kitty-hold">kitty command line option</a>
+</li>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-hold">kitty-+kitten-icat command line option</a>
 </li>
       </ul></li>
       <li>
@@ -933,6 +935,8 @@ ga('send', 'pageview');
       <ul>
         <li><a href="generated/launch.html#cmdoption-watcher">command line option</a>
 </li>
+        <li><a href="invocation.html#cmdoption-kitty-watcher">kitty command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-launch-watcher">kitty-@-launch command line option</a>
 </li>
         <li><a href="launch.html#cmdoption-launch-watcher">launch command line option</a>
@@ -1151,6 +1155,8 @@ ga('send', 'pageview');
       <ul>
         <li><a href="generated/launch.html#cmdoption-watcher">command line option</a>
 </li>
+        <li><a href="invocation.html#cmdoption-kitty-watcher">kitty command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-launch-watcher">kitty-@-launch command line option</a>
 </li>
         <li><a href="launch.html#cmdoption-launch-watcher">launch command line option</a>
@@ -1253,6 +1259,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.active_tab_title_template">kitty.active_tab_title_template</a>
 </li>
         <li><a href="conf.html#opt-kitty.adjust_line_height">kitty.adjust_line_height</a>
+</li>
+        <li><a href="conf.html#opt-kitty.allow_hyperlinks">kitty.allow_hyperlinks</a>
 </li>
         <li><a href="conf.html#opt-kitty.allow_remote_control">kitty.allow_remote_control</a>
 </li>
@@ -1436,6 +1444,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.sync_to_monitor">kitty.sync_to_monitor</a>
 </li>
+        <li><a href="conf.html#opt-kitty.tab_activity_symbol">kitty.tab_activity_symbol</a>
+</li>
         <li><a href="conf.html#opt-kitty.tab_bar_background">kitty.tab_bar_background</a>
 </li>
         <li><a href="conf.html#opt-kitty.tab_bar_edge">kitty.tab_bar_edge</a>
@@ -1594,6 +1604,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#shortcut-kitty.Open-the-kitty-command-shell">kitty.Open the kitty command shell</a>
 </li>
         <li><a href="conf.html#shortcut-kitty.Open-the-selected-file-at-the-selected-line">kitty.Open the selected file at the selected line</a>
+</li>
+        <li><a href="conf.html#shortcut-kitty.Open-the-selected-hyperlink">kitty.Open the selected hyperlink</a>
 </li>
         <li><a href="conf.html#shortcut-kitty.Open-URL">kitty.Open URL</a>
 </li>
@@ -1929,6 +1941,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="invocation.html#cmdoption-kitty-wait-for-single-instance-window-close">--wait-for-single-instance-window-close</a>
 </li>
+        <li><a href="invocation.html#cmdoption-kitty-watcher">--watcher &lt;WATCHER&gt;</a>
+</li>
         <li><a href="invocation.html#cmdoption-kitty-single-instance">-1</a>
 </li>
         <li><a href="invocation.html#cmdoption-kitty-config">-c &lt;CONFIG&gt;</a>
@@ -1940,6 +1954,8 @@ ga('send', 'pageview');
         <li><a href="invocation.html#cmdoption-kitty-title">-T &lt;TITLE&gt;</a>
 </li>
         <li><a href="invocation.html#cmdoption-kitty-version">-v</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-watcher">-w &lt;WATCHER&gt;</a>
 </li>
       </ul></li>
       <li>
@@ -2016,6 +2032,8 @@ ga('send', 'pageview');
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-detect-support">--detect-support</a>
 </li>
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-detection-timeout">--detection-timeout &lt;DETECTION_TIMEOUT&gt;</a>
+</li>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-hold">--hold</a>
 </li>
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-place">--place &lt;PLACE&gt;</a>
 </li>
@@ -2515,6 +2533,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.adjust_line_height">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.allow_hyperlinks
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.allow_hyperlinks">Config Setting</a>
 </li>
       </ul></li>
       <li>
@@ -3225,6 +3250,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.Open the selected hyperlink
+
+      <ul>
+        <li><a href="conf.html#shortcut-kitty.Open-the-selected-hyperlink">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
     kitty.Open URL
 
       <ul>
@@ -3523,6 +3555,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.sync_to_monitor">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.tab_activity_symbol
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.tab_activity_symbol">Config Setting</a>
 </li>
       </ul></li>
       <li>
