--- a/kitty/kittens/unicode-input.html
+++ b/kitty/kittens/unicode-input.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Unicode input &#8212; kitty 0.18.3 documentation</title>
+    <title>Unicode input &#8212; kitty 0.19.0 documentation</title>
     <link rel="stylesheet" href="../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../_static/custom.css" type="text/css" />
@@ -18,7 +18,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="close-tab" href="../generated/rc.html" />
-    <link rel="prev" title="Draw a GPU accelerated dock panel on your desktop" href="panel.html" />
+    <link rel="prev" title="Remote files" href="remote_file.html" />
 
 <!-- Google Analytics -->
 <script>
@@ -88,7 +88,7 @@ ga('send', 'pageview');
 <h3>Related Topics</h3>
 <ul>
   <li><a href="../index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="panel.html" title="previous chapter">Draw a GPU accelerated dock panel on your desktop</a></li>
+      <li>Previous: <a href="remote_file.html" title="previous chapter">Remote files</a></li>
       <li>Next: <a href="../generated/rc.html" title="next chapter">close-tab</a></li>
   </ul></li>
 </ul>
