--- a/kitty/performance.html
+++ b/kitty/performance.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kitty Performance &#8212; kitty 0.18.3 documentation</title>
+    <title>kitty Performance &#8212; kitty 0.19.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -18,7 +18,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Working with the screen and history buffer contents" href="pipe.html" />
-    <link rel="prev" title="Marks" href="marks.html" />
+    <link rel="prev" title="Customizing the actions taken when clicking on links" href="open_actions.html" />
 
 <!-- Google Analytics -->
 <script>
@@ -78,7 +78,7 @@ ga('send', 'pageview');
 <h3>Related Topics</h3>
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="marks.html" title="previous chapter">Marks</a></li>
+      <li>Previous: <a href="open_actions.html" title="previous chapter">Customizing the actions taken when clicking on links</a></li>
       <li>Next: <a href="pipe.html" title="next chapter">Working with the screen and history buffer contents</a></li>
   </ul></li>
 </ul>
