--- a/kitty/marks.html
+++ b/kitty/marks.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Marks &#8212; kitty 0.18.3 documentation</title>
+    <title>Marks &#8212; kitty 0.19.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="kitty Performance" href="performance.html" />
+    <link rel="next" title="Customizing the actions taken when clicking on links" href="open_actions.html" />
     <link rel="prev" title="Layouts" href="layouts.html" />
 
 <!-- Google Analytics -->
@@ -89,7 +89,7 @@ ga('send', 'pageview');
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
       <li>Previous: <a href="layouts.html" title="previous chapter">Layouts</a></li>
-      <li>Next: <a href="performance.html" title="next chapter"><em>kitty</em> Performance</a></li>
+      <li>Next: <a href="open_actions.html" title="next chapter">Customizing the actions taken when clicking on links</a></li>
   </ul></li>
 </ul>
 </div>
