--- a/kitty/graphics-protocol.html
+++ b/kitty/graphics-protocol.html
@@ -20,14 +20,16 @@
     <link rel="next" title="Integrations with other tools" href="integrations.html" />
     <link rel="prev" title="Frequently Asked Questions" href="faq.html" />
 
-<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-20736318-2"></script>
 <script>
-window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-ga('create', 'UA-20736318-2', 'auto');
-ga('send', 'pageview');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-20736318-2');
 </script>
-<script async="async" src='https://www.google-analytics.com/analytics.js'></script>
-<!-- End Google Analytics -->
+
   
    
   <link rel="stylesheet" href="_static/custom.css" type="text/css" />
