kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; kitty 0.19.1 documentation</title>
+    <title>Index &#8212; kitty 0.19.2 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -918,6 +918,13 @@
 </li>
       </ul></li>
       <li>
+    --wait-for &lt;WAIT_FOR&gt;
+
+      <ul>
+        <li><a href="kittens/query_terminal.html#cmdoption-kitty-kitten-query_terminal-wait-for">kitty-+kitten-query_terminal command line option</a>
+</li>
+      </ul></li>
+      <li>
     --wait-for-completion
 
       <ul>
@@ -1326,6 +1333,8 @@
 </li>
         <li><a href="conf.html#opt-kitty.cursor_underline_thickness">kitty.cursor_underline_thickness</a>
 </li>
+        <li><a href="conf.html#opt-kitty.default_pointer_shape">kitty.default_pointer_shape</a>
+</li>
         <li><a href="conf.html#opt-kitty.dim_opacity">kitty.dim_opacity</a>
 </li>
         <li><a href="conf.html#opt-kitty.disable_ligatures">kitty.disable_ligatures</a>
@@ -1407,6 +1416,8 @@
         <li><a href="conf.html#opt-kitty.open_url_with">kitty.open_url_with</a>
 </li>
         <li><a href="conf.html#opt-kitty.placement_strategy">kitty.placement_strategy</a>
+</li>
+        <li><a href="conf.html#opt-kitty.pointer_shape_when_dragging">kitty.pointer_shape_when_dragging</a>
 </li>
         <li><a href="conf.html#opt-kitty.pointer_shape_when_grabbed">kitty.pointer_shape_when_grabbed</a>
 </li>
@@ -2071,6 +2082,13 @@
         <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-config">-c &lt;CONFIG&gt;</a>
 </li>
         <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-override">-o &lt;OVERRIDE&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-+kitten-query_terminal command line option
+
+      <ul>
+        <li><a href="kittens/query_terminal.html#cmdoption-kitty-kitten-query_terminal-wait-for">--wait-for &lt;WAIT_FOR&gt;</a>
 </li>
       </ul></li>
       <li>
@@ -2804,6 +2822,13 @@
 </li>
       </ul></li>
       <li>
+    kitty.default_pointer_shape
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.default_pointer_shape">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.dim_opacity
 
       <ul>
@@ -3305,6 +3330,13 @@
 
       <ul>
         <li><a href="conf.html#opt-kitty.placement_strategy">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.pointer_shape_when_dragging
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.pointer_shape_when_dragging">Config Setting</a>
 </li>
       </ul></li>
       <li>
