--- a/kitty/kittens/panel.html
+++ b/kitty/kittens/panel.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Draw a GPU accelerated dock panel on your desktop &#8212; kitty 0.19.1 documentation</title>
+    <title>Draw a GPU accelerated dock panel on your desktop &#8212; kitty 0.19.2 documentation</title>
     <link rel="stylesheet" href="../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../_static/custom.css" type="text/css" />
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="../_static/kitty.png"/>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Remote files" href="remote_file.html" />
+    <link rel="next" title="Query terminal" href="query_terminal.html" />
     <link rel="prev" title="icat - Display images in the terminal" href="icat.html" />
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -91,7 +91,7 @@
 <ul>
   <li><a href="../index.html">Documentation overview</a><ul>
       <li>Previous: <a href="icat.html" title="previous chapter">icat - Display images in the terminal</a></li>
-      <li>Next: <a href="remote_file.html" title="next chapter">Remote files</a></li>
+      <li>Next: <a href="query_terminal.html" title="next chapter">Query terminal</a></li>
   </ul></li>
 </ul>
 </div>
