--- a/kitty/kittens/remote_file.html
+++ b/kitty/kittens/remote_file.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Remote files &#8212; kitty 0.19.1 documentation</title>
+    <title>Remote files &#8212; kitty 0.19.2 documentation</title>
     <link rel="stylesheet" href="../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../_static/custom.css" type="text/css" />
@@ -18,7 +18,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Unicode input" href="unicode-input.html" />
-    <link rel="prev" title="Draw a GPU accelerated dock panel on your desktop" href="panel.html" />
+    <link rel="prev" title="Query terminal" href="query_terminal.html" />
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-20736318-2"></script>
@@ -80,7 +80,7 @@
 <h3>Related Topics</h3>
 <ul>
   <li><a href="../index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="panel.html" title="previous chapter">Draw a GPU accelerated dock panel on your desktop</a></li>
+      <li>Previous: <a href="query_terminal.html" title="previous chapter">Query terminal</a></li>
       <li>Next: <a href="unicode-input.html" title="next chapter">Unicode input</a></li>
   </ul></li>
 </ul>
