kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -957,6 +957,8 @@
       <ul>
         <li><a href="generated/launch.html#cmdoption-title">command line option</a>
 </li>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-window-title">kitty-+kitten-hints command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-launch-title">kitty-@-launch command line option</a>
 </li>
         <li><a href="launch.html#cmdoption-launch-title">launch command line option</a>
@@ -2030,6 +2032,8 @@
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-type">--type &lt;TYPE&gt;</a>
 </li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-url-prefixes">--url-prefixes &lt;URL_PREFIXES&gt;</a>
+</li>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-window-title">--window-title &lt;WINDOW_TITLE&gt;</a>
 </li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-word-characters">--word-characters &lt;WORD_CHARACTERS&gt;</a>
 </li>
