kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index &#8212; kitty 0.19.2 documentation</title>
-    <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
     <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
     <script src="_static/jquery.js"></script>
@@ -1337,6 +1337,8 @@
 </li>
         <li><a href="conf.html#opt-kitty.default_pointer_shape">kitty.default_pointer_shape</a>
 </li>
+        <li><a href="conf.html#opt-kitty.detect_urls">kitty.detect_urls</a>
+</li>
         <li><a href="conf.html#opt-kitty.dim_opacity">kitty.dim_opacity</a>
 </li>
         <li><a href="conf.html#opt-kitty.disable_ligatures">kitty.disable_ligatures</a>
@@ -2472,8 +2474,6 @@
         <li><a href="remote-control.html#cmdoption-kitty-set-font-size-all">-a</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty-@-set-spacing command line option
 
@@ -2495,6 +2495,8 @@
         <li><a href="remote-control.html#cmdoption-kitty-set-spacing-match-tab">-t &lt;MATCH_TAB&gt;</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty-@-set-tab-title command line option
 
@@ -2830,6 +2832,13 @@
 
       <ul>
         <li><a href="conf.html#opt-kitty.default_pointer_shape">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.detect_urls
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.detect_urls">Config Setting</a>
 </li>
       </ul></li>
       <li>
