kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; kitty 0.19.2 documentation</title>
+    <title>Index &#8212; kitty 0.19.3 documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -123,6 +123,8 @@
         <li><a href="remote-control.html#cmdoption-kitty-disable-ligatures-all">kitty-@-disable-ligatures command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-last-used-layout-all">kitty-@-last-used-layout command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-send-text-all">kitty-@-send-text command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-background-image-all">kitty-@-set-background-image command line option</a>
 </li>
@@ -382,6 +384,13 @@
 </li>
       </ul></li>
       <li>
+    --exclude-active
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-send-text-exclude-active">kitty-@-send-text command line option</a>
+</li>
+      </ul></li>
+      <li>
     --extent &lt;EXTENT&gt;
 
       <ul>
@@ -520,6 +529,8 @@
     --match &lt;MATCH&gt;
 
       <ul>
+        <li><a href="kittens/broadcast.html#cmdoption-kitty-kitten-broadcast-match">kitty-+kitten-broadcast command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-close-tab-match">kitty-@-close-tab command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-close-window-match">kitty-@-close-window command line option</a>
@@ -577,6 +588,8 @@
     --match-tab &lt;MATCH_TAB&gt;
 
       <ul>
+        <li><a href="kittens/broadcast.html#cmdoption-kitty-kitten-broadcast-match-tab">kitty-+kitten-broadcast command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-disable-ligatures-match-tab">kitty-@-disable-ligatures command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-send-text-match-tab">kitty-@-send-text command line option</a>
@@ -1058,6 +1071,8 @@
     -m &lt;MATCH&gt;
 
       <ul>
+        <li><a href="kittens/broadcast.html#cmdoption-kitty-kitten-broadcast-match">kitty-+kitten-broadcast command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-close-tab-match">kitty-@-close-tab command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-close-window-match">kitty-@-close-window command line option</a>
@@ -1126,6 +1141,8 @@
     -t &lt;MATCH_TAB&gt;
 
       <ul>
+        <li><a href="kittens/broadcast.html#cmdoption-kitty-kitten-broadcast-match-tab">kitty-+kitten-broadcast command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-disable-ligatures-match-tab">kitty-@-disable-ligatures command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-send-text-match-tab">kitty-@-send-text command line option</a>
@@ -1976,6 +1993,19 @@
 </li>
       </ul></li>
       <li>
+    kitty-+kitten-broadcast command line option
+
+      <ul>
+        <li><a href="kittens/broadcast.html#cmdoption-kitty-kitten-broadcast-match">--match &lt;MATCH&gt;</a>
+</li>
+        <li><a href="kittens/broadcast.html#cmdoption-kitty-kitten-broadcast-match-tab">--match-tab &lt;MATCH_TAB&gt;</a>
+</li>
+        <li><a href="kittens/broadcast.html#cmdoption-kitty-kitten-broadcast-match">-m &lt;MATCH&gt;</a>
+</li>
+        <li><a href="kittens/broadcast.html#cmdoption-kitty-kitten-broadcast-match-tab">-t &lt;MATCH_TAB&gt;</a>
+</li>
+      </ul></li>
+      <li>
     kitty-+kitten-clipboard command line option
 
       <ul>
@@ -2393,6 +2423,10 @@
     kitty-@-send-text command line option
 
       <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-send-text-all">--all</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-send-text-exclude-active">--exclude-active</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-send-text-from-file">--from-file &lt;FROM_FILE&gt;</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-send-text-match">--match &lt;MATCH&gt;</a>
@@ -2465,6 +2499,8 @@
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-match-tab">-t &lt;MATCH_TAB&gt;</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty-@-set-font-size command line option
 
@@ -2495,8 +2531,6 @@
         <li><a href="remote-control.html#cmdoption-kitty-set-spacing-match-tab">-t &lt;MATCH_TAB&gt;</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty-@-set-tab-title command line option
 
