--- a/kitty/support.html
+++ b/kitty/support.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Support kitty development &#8212; kitty 0.19.2 documentation</title>
+    <title>Support kitty development &#8212; kitty 0.19.3 documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="clipboard - copy/paste to the system clipboard" href="kittens/clipboard.html" />
+    <link rel="next" title="broadcast - type text in all kitty windows" href="kittens/broadcast.html" />
     <link rel="prev" title="Controlling kitty from scripts or the shell" href="remote-control.html" />
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -75,7 +75,7 @@
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
       <li>Previous: <a href="remote-control.html" title="previous chapter">Controlling kitty from scripts or the shell</a></li>
-      <li>Next: <a href="kittens/clipboard.html" title="next chapter">clipboard - copy/paste to the system clipboard</a></li>
+      <li>Next: <a href="kittens/broadcast.html" title="next chapter">broadcast - type text in all kitty windows</a></li>
   </ul></li>
 </ul>
 </div>
