kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -13,7 +13,6 @@
     <script src="_static/jquery.js"></script>
     <script src="_static/underscore.js"></script>
     <script src="_static/doctools.js"></script>
-    <script src="_static/language_data.js"></script>
     <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" />
@@ -181,6 +180,8 @@
 
       <ul>
         <li><a href="invocation.html#cmdoption-kitty-class">kitty command line option</a>
+</li>
+        <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-class">kitty-+kitten-panel command line option</a>
 </li>
       </ul></li>
       <li>
@@ -627,6 +628,8 @@
 
       <ul>
         <li><a href="invocation.html#cmdoption-kitty-name">kitty command line option</a>
+</li>
+        <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-name">kitty-+kitten-panel command line option</a>
 </li>
       </ul></li>
       <li>
@@ -2105,6 +2108,8 @@
     kitty-+kitten-panel command line option
 
       <ul>
+        <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-class">--class &lt;CLS&gt;</a>
+</li>
         <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-columns">--columns &lt;COLUMNS&gt;</a>
 </li>
         <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-config">--config &lt;CONFIG&gt;</a>
@@ -2112,6 +2117,8 @@
         <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-edge">--edge &lt;EDGE&gt;</a>
 </li>
         <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-lines">--lines &lt;LINES&gt;</a>
+</li>
+        <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-name">--name &lt;NAME&gt;</a>
 </li>
         <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-override">--override &lt;OVERRIDE&gt;</a>
 </li>
@@ -3897,7 +3904,7 @@
     <div class="clearer"></div>
   </div>
     <div class="footer">
-      &copy;2020, Kovid Goyal.
+      &copy;2021, Kovid Goyal.
       
     </div>
 
