--- a/kitty/invocation.html
+++ b/kitty/invocation.html
@@ -13,11 +13,10 @@
     <script src="_static/jquery.js"></script>
     <script src="_static/underscore.js"></script>
     <script src="_static/doctools.js"></script>
-    <script src="_static/language_data.js"></script>
     <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Key encoding for extended keyboard protocol" href="key-encoding.html" />
+    <link rel="next" title="A protocol for comprehensive keyboard handling in terminals" href="keyboard-protocol.html" />
     <link rel="prev" title="Integrations with other tools" href="integrations.html" />
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -91,7 +90,7 @@
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
       <li>Previous: <a href="integrations.html" title="previous chapter">Integrations with other tools</a></li>
-      <li>Next: <a href="key-encoding.html" title="next chapter">Key encoding for extended keyboard protocol</a></li>
+      <li>Next: <a href="keyboard-protocol.html" title="next chapter">A protocol for comprehensive keyboard handling in terminals</a></li>
   </ul></li>
 </ul>
 </div>
@@ -276,7 +275,7 @@ Choices: <code class="code docutils literal notranslate"><span class="pre">fulls
     <div class="clearer"></div>
   </div>
     <div class="footer">
-      &copy;2020, Kovid Goyal.
+      &copy;2021, Kovid Goyal.
       
     </div>
 
