--- a/kitty/kittens/unicode-input.html
+++ b/kitty/kittens/unicode-input.html
@@ -13,7 +13,6 @@
     <script src="../_static/jquery.js"></script>
     <script src="../_static/underscore.js"></script>
     <script src="../_static/doctools.js"></script>
-    <script src="../_static/language_data.js"></script>
     <link rel="shortcut icon" href="../_static/kitty.png"/>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
@@ -117,10 +116,10 @@ character and pressing enter, for example, type in <code class="docutils literal
 typing a leading period and then the two character index and pressing Enter.
 The up and down arrow keys can be used to choose the previous and next unicode
 symbol respectively.</p>
-<p>In <span class="guilabel">Name</span> mode you instead type words from the character name and use the arrow
-keys/tab to select the character from the displayed matches. You can also type
-a leading period and the index for the match if you don’t like to use arrow
-keys.</p>
+<p>In <span class="guilabel">Name</span> mode you instead type words from the character name and use
+the arrow keys/tab to select the character from the displayed matches. You can
+also type a space followed by a period and the index for the match if you don’t
+like to use arrow keys.</p>
 <p>You can switch between modes using either the function keys or by pressing
 <kbd class="kbd docutils literal notranslate"><kbd class="kbd docutils literal notranslate">Ctrl</kbd>+<kbd class="kbd docutils literal notranslate">[</kbd></kbd> and <kbd class="kbd docutils literal notranslate"><kbd class="kbd docutils literal notranslate">Ctrl</kbd>+<kbd class="kbd docutils literal notranslate">]</kbd></kbd>.</p>
 <div class="section" id="command-line-interface">
@@ -151,7 +150,7 @@ Choices: <code class="code docutils literal notranslate"><span class="pre">graph
     <div class="clearer"></div>
   </div>
     <div class="footer">
-      &copy;2020, Kovid Goyal.
+      &copy;2021, Kovid Goyal.
       
     </div>
 
