kitty website updates

--- a/kitty/keyboard-protocol.html
+++ b/kitty/keyboard-protocol.html
@@ -270,7 +270,7 @@ field is present. The <code class="docutils literal notranslate"><span class="pr
 <span class="n">CSI</span> <span class="n">key</span><span class="o">-</span><span class="n">code</span><span class="p">;</span><span class="n">modifier</span>    <span class="c1"># this is a press event</span>
 <span class="n">CSI</span> <span class="n">key</span><span class="o">-</span><span class="n">code</span><span class="p">;</span><span class="n">modifier</span><span class="p">:</span><span class="mi">1</span>  <span class="c1"># this is a press event</span>
 <span class="n">CSI</span> <span class="n">key</span><span class="o">-</span><span class="n">code</span><span class="p">;</span><span class="n">modifier</span><span class="p">:</span><span class="mi">2</span>  <span class="c1"># this is a repeat event</span>
-<span class="n">CSI</span> <span class="n">key</span><span class="o">-</span><span class="n">code</span><span class="p">:</span><span class="n">modifier</span><span class="p">:</span><span class="mi">3</span>  <span class="c1"># this is a release event</span>
+<span class="n">CSI</span> <span class="n">key</span><span class="o">-</span><span class="n">code</span><span class="p">;</span><span class="n">modifier</span><span class="p">:</span><span class="mi">3</span>  <span class="c1"># this is a release event</span>
 </pre></div>
 </div>
 <div class="admonition note">
