kitty website updates

--- a/kitty/keyboard-protocol.html
+++ b/kitty/keyboard-protocol.html
@@ -917,58 +917,63 @@ compatibility reasons.</p>
 </tr>
 <tr class="row-odd"><td><p>KP_DELETE</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57426 u</span></code></p></td>
-<td><p>LEFT_SHIFT</p></td>
+<td><p>MEDIA_PLAY</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57427 u</span></code></p></td>
 </tr>
-<tr class="row-even"><td><p>LEFT_CONTROL</p></td>
+<tr class="row-even"><td><p>MEDIA_PAUSE</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57428 u</span></code></p></td>
-<td><p>LEFT_ALT</p></td>
+<td><p>MEDIA_PLAY_PAUSE</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57429 u</span></code></p></td>
 </tr>
-<tr class="row-odd"><td><p>LEFT_SUPER</p></td>
+<tr class="row-odd"><td><p>MEDIA_REVERSE</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57430 u</span></code></p></td>
-<td><p>RIGHT_SHIFT</p></td>
+<td><p>MEDIA_STOP</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57431 u</span></code></p></td>
 </tr>
-<tr class="row-even"><td><p>RIGHT_CONTROL</p></td>
+<tr class="row-even"><td><p>MEDIA_FAST_FORWARD</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57432 u</span></code></p></td>
-<td><p>RIGHT_ALT</p></td>
+<td><p>MEDIA_REWIND</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57433 u</span></code></p></td>
 </tr>
-<tr class="row-odd"><td><p>RIGHT_SUPER</p></td>
+<tr class="row-odd"><td><p>MEDIA_TRACK_NEXT</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57434 u</span></code></p></td>
-<td><p>MEDIA_PLAY</p></td>
+<td><p>MEDIA_TRACK_PREVIOUS</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57435 u</span></code></p></td>
 </tr>
-<tr class="row-even"><td><p>MEDIA_PAUSE</p></td>
+<tr class="row-even"><td><p>MEDIA_RECORD</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57436 u</span></code></p></td>
-<td><p>MEDIA_PLAY_PAUSE</p></td>
+<td><p>LOWER_VOLUME</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57437 u</span></code></p></td>
 </tr>
-<tr class="row-odd"><td><p>MEDIA_REVERSE</p></td>
+<tr class="row-odd"><td><p>RAISE_VOLUME</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57438 u</span></code></p></td>
-<td><p>MEDIA_STOP</p></td>
+<td><p>MUTE_VOLUME</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57439 u</span></code></p></td>
 </tr>
-<tr class="row-even"><td><p>MEDIA_FAST_FORWARD</p></td>
+<tr class="row-even"><td><p>LEFT_SHIFT</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57440 u</span></code></p></td>
-<td><p>MEDIA_REWIND</p></td>
+<td><p>LEFT_CONTROL</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57441 u</span></code></p></td>
 </tr>
-<tr class="row-odd"><td><p>MEDIA_TRACK_NEXT</p></td>
+<tr class="row-odd"><td><p>LEFT_ALT</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57442 u</span></code></p></td>
-<td><p>MEDIA_TRACK_PREVIOUS</p></td>
+<td><p>LEFT_SUPER</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57443 u</span></code></p></td>
 </tr>
-<tr class="row-even"><td><p>MEDIA_RECORD</p></td>
+<tr class="row-even"><td><p>RIGHT_SHIFT</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57444 u</span></code></p></td>
-<td><p>LOWER_VOLUME</p></td>
+<td><p>RIGHT_CONTROL</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57445 u</span></code></p></td>
 </tr>
-<tr class="row-odd"><td><p>RAISE_VOLUME</p></td>
+<tr class="row-odd"><td><p>RIGHT_ALT</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57446 u</span></code></p></td>
-<td><p>MUTE_VOLUME</p></td>
+<td><p>RIGHT_SUPER</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57447 u</span></code></p></td>
+</tr>
+<tr class="row-even"><td><p>ISO_LEVEL3_SHIFT</p></td>
+<td><p><code class="docutils literal notranslate"><span class="pre">57448 u</span></code></p></td>
+<td><p>ISO_LEVEL5_SHIFT</p></td>
+<td><p><code class="docutils literal notranslate"><span class="pre">57449 u</span></code></p></td>
 </tr>
 </tbody>
 </table>
